--- a/frontend/angula_php/src/index.html
+++ b/frontend/angula_php/src/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css">
-  <script type="module" src="https://unpkg.com/@splinetool/viewer@1.12.23/build/spline-viewer.js"></script>
 </head>
 <body>
 
@@ -18,13 +17,15 @@
 
   <script type="module" src="https://unpkg.com/@splinetool/viewer@1.12.27/build/spline-viewer.js"></script>
 <div id="spline-trigger"
-  style="position: fixed; bottom: 10px; right: 10px; width: 300px; height: 250px; z-index: 9998; cursor: pointer;">
+  style="position: fixed; bottom: 10px; right: 10px; width: 300px; height: 250px; z-index: 9998; cursor: pointer;"
+  >
 
 
   <spline-viewer
     url="https://prod.spline.design/aMZ57pv4yctrR3Wm/scene.splinecode"
     loading-anim-type="spinner-small-dark"
-    style="width: 100%; height: 100%;">
+    style="width: 250px; height: 100%; ">
+    
   </spline-viewer>
 
   <div id="chat-tooltip" class="bg-white p-2 rounded shadow border text-start small fw-bold"
